--- a/rtmp-nginx/nginx.conf.tmpl
+++ b/rtmp-nginx/nginx.conf.tmpl
@@ -31,13 +31,18 @@ rtmp {
             {{if exists "/publishdone/url"}}
                 on_publish_done {{getv "/publishdone/url"}};
             {{end}}
+            {{if exists "/update/url"}}
+                on_update {{getv "/update/url"}};
+                notify_update_strict off;
+            {{end}}
+            {{if exists "/update/timeout"}}
+                notify_update_timeout {{getv "/update/timeout"}};
+            {{end}}
             
-
             {{if exists "/hls"}}
                 hls on;
                 hls_path /vout/hls;
             {{end}}
-
             {{if exists "/dash"}}
                 dash on;
                 dash_path /vout/dash;
